# stub-cpp-cmake

./: .gitignore  CMakeLists.txt  README.md
cbli/: CMakeLists.txt  cbli.cpp
documentation/: CMakeLists.txt
include/cbl/: cbl.h
libcbl/: CMakeLists.txt  libcbl.cpp
tests/: CMakeLists.txt  all_tests.cpp
